# MPointers

./: CMakeLists.txt  README.md  main.cpp
App/: CMakeLists.txt  EjemProfe.txt  main.cpp  oldMain.txt
App/include/: DoublyLinkedList.h  Node.h  SortingAlgrithms.h
App/tests/: doublylinkedlist_tests.cpp  mpointer_tests.cpp  sorting_tests.cpp  test.cpp
MPointers/: CMakeLists.txt
MPointers/include/: MPointer.h  MPointerBase.h  MPointerGC.h  Node.h  RefCountList.h
MPointers/src/: MPointer.cpp  MPointerBase.cpp  MPointerGC.cpp  RefCountList.cpp
